--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <p class="text-indigo-200 mb-8 max-w-lg mx-auto">I can make keychains with any logo, photo, or text. Just send me a message and we'll chat about the design!</p>
             
             <div class="flex justify-center space-x-8 mb-12">
-                <a href="#" class="text-3xl hover:text-indigo-400 transition"><i class="fab fa-instagram"></i></a>
+                <a href="www.instagram,com/epoxyfied_toothless" class="text-3xl hover:text-indigo-400 transition"><i class="fab fa-instagram"></i></a>
                 <a href="#" class="text-3xl hover:text-indigo-400 transition"><i class="fab fa-tiktok"></i></a>
                 <!-- Update the link below with your phone number too -->
                 <a href="https://wa.me/1234567890" class="text-3xl hover:text-indigo-400 transition"><i class="fab fa-whatsapp"></i></a>
@@ -210,10 +210,11 @@
          */
         function orderWhatsApp(productName) {
             // REPLACE "1234567890" WITH YOUR ACTUAL PHONE NUMBER (Include country code, e.g., 91XXXXXXXXXX)
-            const phoneNumber = "1234567890"; 
+            const phoneNumber = "7205049701"; 
             const message = encodeURIComponent(`Hi! I'm interested in buying the "${productName}" keychain from your website. Is it still available?`);
             window.open(`https://wa.me/${phoneNumber}?text=${message}`, '_blank');
         }
     </script>
 </body>
+
 </html>
