Remove duplicate HTML content
The file was duplicated, resulting in two identical HTML documents within the same file.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <p class="text-indigo-200 mb-8 max-w-lg mx-auto">I can make keychains with any logo, photo, or text. Just send me a message and we'll chat about the design!</p>
             
             <div class="flex justify-center space-x-8 mb-12">
-                <a href="www.instagram,com/epoxyfied_toothless" class="text-3xl hover:text-indigo-400 transition"><i class="fab fa-instagram"></i></a>
+                <a href="www.instagram.com/epoxyfied_toothless" class="text-3xl hover:text-indigo-400 transition"><i class="fab fa-instagram"></i></a>
                 <a href="#" class="text-3xl hover:text-indigo-400 transition"><i class="fab fa-tiktok"></i></a>
                 <!-- Update the link below with your phone number too -->
                 <a href="https://wa.me/1234567890" class="text-3xl hover:text-indigo-400 transition"><i class="fab fa-whatsapp"></i></a>
@@ -218,3 +218,4 @@
 </body>
 
 </html>
+
